# sound-Boost-pro

./: .clang-format  .clang-tidy  .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  structure.txt  vcpkg.json
.github/workflows/: build.yml
docs/architecture/: API_REFERENCE.md  ARCHITECTURE.md  DESIGN_PATTERNS.md
docs/architecture/diagrams/: audio_pipeline.puml  ml_workflow.puml  system_architecture.puml
docs/developer/: DEVELOPER_GUIDE.md
docs/user_guide/: FAQ.md  INSTALLATION.md  USER_MANUAL.md
src/: Application.cpp  Application.hpp  main.cpp
src/core/: CMakeLists.txt
src/core/analysis/: FrequencyAnalyzer.hpp  LevelMeter.cpp  LevelMeter.hpp  SpectrumAnalyzer.cpp  SpectrumAnalyzer.hpp  WaveformAnalyzer.cpp  WaveformAnalyzer.hpp
src/core/audio/: AudioBuffer.cpp  AudioBuffer.hpp  AudioCapture.hpp  AudioDevice.hpp  AudioEngine.cpp  AudioEngine.hpp  AudioFormat.hpp  AudioOutput.hpp
src/core/dsp/: BiquadFilter.cpp  BiquadFilter.hpp  DSPProcessor.cpp  DSPProcessor.hpp  FFTProcessor.cpp  FFTProcessor.hpp  FilterDesign.cpp  FilterDesign.hpp
src/core/dsp/SIMD/: SIMDDispatcher.cpp  SIMDDispatcher.hpp
src/core/effects/: BassBooster.cpp  BassBooster.hpp  Compressor.cpp  Compressor.hpp  EffectBase.cpp  EffectBase.hpp  EffectChain.cpp  EffectChain.hpp  Equalizer.cpp  Equalizer.hpp  Limiter.cpp  Limiter.hpp  Reverb.cpp  Reverb.hpp  StereoWidener.cpp  StereoWidener.hpp
src/core/ml/: AdaptiveEQ.cpp  AdaptiveEQ.hpp  BeatDetector.cpp  BeatDetector.hpp  FeatureExtractor.cpp  FeatureExtractor.hpp  GenreDetector.cpp  GenreDetector.hpp  MLEngine.cpp  MLEngine.hpp  ModelLoader.hpp  VoiceDetector.hpp
src/gui/: CMakeLists.txt  MainWindow.cpp  MainWindow.hpp
src/gui/components/: CircularProgress.cpp  CircularProgress.hpp  DeviceSelector.hpp  EQBandWidget.cpp  EQBandWidget.hpp  Knob.cpp  Knob.hpp  PresetSelector.hpp  Slider.cpp  Slider.hpp  SpectrumWidget.cpp  SpectrumWidget.hpp  ToggleSwitch.cpp  ToggleSwitch.hpp  VUMeter.cpp  VUMeter.hpp  WaveformWidget.cpp  WaveformWidget.hpp
src/gui/themes/: ThemeManager.cpp  ThemeManager.hpp
src/gui/views/: AnalyzerView.hpp  BassBoostView.hpp  EffectsView.hpp  EqualizerView.hpp  HomeView.cpp  HomeView.hpp  MLInsightsView.hpp  SettingsView.hpp
src/network/: CMakeLists.txt  CloudSync.cpp  CloudSync.hpp  LicenseValidator.cpp  LicenseValidator.hpp  TelemetryClient.cpp  TelemetryClient.hpp  UpdateChecker.cpp  UpdateChecker.hpp
src/platform/: CMakeLists.txt  PlatformAbstraction.cpp  PlatformAbstraction.hpp
src/platform/linux/: LinuxAudioCapture.hpp  PulseAudioCapture.cpp  PulseAudioCapture.hpp
src/platform/macos/: MacOSAudioCapture.hpp
src/platform/windows/: WindowsAudioCapture.cpp  WindowsAudioCapture.hpp
src/services/: AudioService.cpp  AudioService.hpp  CMakeLists.txt  EventBus.cpp  EventBus.hpp  ProfileService.cpp  ProfileService.hpp  ServiceLocator.cpp  ServiceLocator.hpp  SettingsService.cpp  SettingsService.hpp
src/utils/: CMakeLists.txt  Configuration.cpp  Configuration.hpp  FileUtils.cpp  FileUtils.hpp  LockFreeQueue.hpp  Logger.cpp  Logger.hpp  MathUtils.hpp  MemoryPool.hpp  Profiler.hpp  RingBuffer.hpp  StringUtils.cpp  StringUtils.hpp  ThreadPool.cpp  ThreadPool.hpp  Timer.cpp  Timer.hpp
tests/: CMakeLists.txt
tests/unit/: test_audio_buffer.cpp  test_biquad_filter.cpp  test_dsp_processor.cpp  test_effects.cpp  test_fft.cpp  test_ml_engine.cpp
